--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             const TYPING_PHRASE = "a full moon illuminates the night sky";
             const REQUIRED_SAMPLES = 5;
-            const API_BASE_URL = 'http://127.0.0.1:8000';
+            const API_BASE_URL = 'https://typepod.l5.fyi';
 
             const typingPhraseEl = document.getElementById('typingPhrase');
             const typingInputEl = document.getElementById('typingInput');
