--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             align-items: center;
             min-height: 100vh;
             color: #333;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
         .container {
             background-color: #ffffff;
@@ -25,18 +26,21 @@
             padding: 40px;
             box-sizing: border-box;
             text-align: center;
+            transition: background-color 0.3s ease;
         }
         h1 {
             font-size: 28px;
             font-weight: 700;
             color: #2c3e50;
             margin-bottom: 15px;
+            transition: color 0.3s ease;
         }
         p {
             font-size: 16px;
             color: #555;
             margin-bottom: 25px;
             line-height: 1.6;
+            transition: color 0.3s ease;
         }
         .typing-phrase-container {
             background-color: #e8f0fe;
@@ -49,12 +53,14 @@
             text-align: left;
             border-radius: 4px;
             letter-spacing: 1px;
+            transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
         }
         .typing-phrase-container span {
             transition: background-color 0.3s ease;
         }
         .typing-phrase-container span.highlight {
             background-color: #f1c40f;
+            color: #333; /* Ensure text is readable on highlight */
             border-radius: 3px;
         }
         .input-field {
@@ -64,7 +70,9 @@
             border-radius: 8px;
             font-size: 18px;
             box-sizing: border-box;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+            background-color: #fff;
+            color: #333;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
             text-align: center;
         }
         .input-field:focus {
@@ -82,6 +90,7 @@
             color: #7f8c8d;
             margin-top: 20px;
             font-weight: 500;
+            transition: color 0.3s ease;
         }
         .progress-bar-container {
             width: 100%;
@@ -90,6 +99,7 @@
             border-radius: 5px;
             margin-top: 10px;
             overflow: hidden;
+            transition: background-color 0.3s ease;
         }
         .progress-bar {
             width: 0%;
@@ -117,6 +127,58 @@
             background-color: #f8d7da;
             color: #721c24;
             border: 1px solid #f5c6cb;
+        }
+
+        /* --- ADDED: Dark Mode Theme --- */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #1a1a1a;
+                color: #e0e0e0;
+            }
+            .container {
+                background-color: #2c2c2c;
+                box-shadow: 0 8px 30px rgba(0, 0, 0, 0.25);
+            }
+            h1 {
+                color: #ffffff;
+            }
+            p {
+                color: #b0b0b0;
+            }
+            .typing-phrase-container {
+                background-color: #3a3a4a;
+                border-left: 5px solid #5a67d8;
+                color: #e0e0e0;
+            }
+            .input-field {
+                background-color: #333333;
+                border-color: #555555;
+                color: #e0e0e0;
+            }
+            .input-field:focus {
+                border-color: #5a67d8;
+                box-shadow: 0 0 0 4px rgba(90, 103, 216, 0.25);
+            }
+            .input-field:disabled {
+                background-color: #252525;
+                color: #666;
+            }
+            .progress-counter {
+                color: #888;
+            }
+            .progress-bar-container {
+                background-color: #444;
+            }
+            .message-box.success {
+                background-color: #1c3d24;
+                color: #a7f3d0;
+                border: 1px solid #2f6d45;
+            }
+            .message-box.error {
+                background-color: #4a1d1f;
+                color: #fca5a5;
+                border: 1px solid #8c2d30;
+            }
         }
     </style>
 </head>
@@ -191,11 +253,14 @@
                         body: JSON.stringify(payload),
                     });
                     const data = await response.json();
-                    if (!response.ok) throw new Error(data.detail || 'An unknown error occurred.');
+                    if (!response.ok) {
+                         // The new server returns a nested detail object
+                        const errorDetail = (data.detail && data.detail.detail) ? data.detail.detail : 'An unknown error occurred.';
+                        throw new Error(errorDetail);
+                    }
 
                     if (data.message) {
                         successfulSamples = REQUIRED_SAMPLES;
-                        // --- Link added to this message ---
                         const finalMessage = `
                             <strong>Session Complete!</strong><br>
                             Your Session ID is: <strong>${sessionId}</strong><br><br>
