--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typing Pattern Recorder</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>TypePod: Secure Typing Pattern Verification</title>
+
+    <meta name="description" content="TypePod offers secure identity verification through unique typing patterns. Contribute to a project focused on biometrics and privacy.">
+    <meta name="keywords" content="typepod, typing pattern, biometric, verification, security, privacy, identity, research, open source">
+    <meta name="author" content="TypePod Team">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://typepod.l5.fyi/"> <meta property="og:title" content="TypePod: Secure Typing Pattern Verification">
+    <meta property="og:description" content="TypePod offers secure identity verification through unique typing patterns. Contribute to a project focused on biometrics and privacy.">
+    <meta property="og:image" content="https://typepod.l5.fyi/social-preview.png"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://typepod.l5.fyi/"> <meta property="twitter:title" content="TypePod: Secure Typing Pattern Verification">
+    <meta property="twitter:description" content="TypePod offers secure identity verification through unique typing patterns. Contribute to a project focused on biometrics and privacy.">
+    <meta property="twitter:image" content="https://typepod.l5.fyi/social-preview.png"> <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             background-color: #f4f7f9;
             display: flex;
-            justify-content: center;
+            flex-direction: column; /* Changed for footer */
+            justify-content: space-between; /* Changed for footer */
             align-items: center;
             min-height: 100vh;
             color: #333;
@@ -27,6 +39,7 @@
             box-sizing: border-box;
             text-align: center;
             transition: background-color 0.3s ease;
+            margin: auto; /* Centers container vertically if space allows */
         }
         h1 {
             font-size: 28px;
@@ -128,7 +141,6 @@
             color: #721c24;
             border: 1px solid #f5c6cb;
         }
-        /* Visually hidden label for accessibility */
         .visually-hidden {
             position: absolute;
             width: 1px;
@@ -140,7 +152,30 @@
             border: 0;
         }
 
-        /* --- Dark Mode Theme --- */
+        /* Footer styles */
+        .app-footer {
+            margin-top: 40px; /* Space between content and footer */
+            padding: 20px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #7f8c8d;
+            width: 100%;
+            box-sizing: border-box;
+            background-color: #eef1f3; /* Light background for footer */
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+        .app-footer a {
+            color: #4a90e2;
+            text-decoration: none;
+            margin: 0 10px;
+            transition: color 0.2s ease;
+        }
+        .app-footer a:hover {
+            text-decoration: underline;
+            color: #357ABD;
+        }
+
+        /* Dark Mode Theme Adjustments for Footer */
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: #1a1a1a;
@@ -190,6 +225,16 @@
                 color: #fca5a5;
                 border: 1px solid #8c2d30;
             }
+            .app-footer {
+                background-color: #222222; /* Darker background for footer */
+                color: #999;
+            }
+            .app-footer a {
+                color: #79a6e8;
+            }
+            .app-footer a:hover {
+                color: #9cbff2;
+            }
         }
     </style>
 </head>
@@ -213,10 +258,20 @@
         <div id="messageBox" class="message-box" role="status" aria-live="polite"></div>
     </div>
 
+    <footer class="app-footer">
+        <p>
+            <a href="https://docs.typepod.l5.fyi" target="_blank">Documentation</a> |
+            <a href="https://github.com/your-org/typepod" target="_blank">GitHub</a> |
+            <a href="https://discord.gg/your-invite" target="_blank">Discord</a>
+        </p>
+        <p>&copy; 2023 TypePod. All rights reserved.</p>
+    </footer>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const TYPING_PHRASE = "a full moon illuminates the night sky";
             const REQUIRED_SAMPLES = 5;
+            // !!! IMPORTANT: Update API_BASE_URL to your actual backend URL !!!
             const API_BASE_URL = 'https://typepod.l5.fyi';
 
             const typingPhraseEl = document.getElementById('typingPhrase');
@@ -267,24 +322,23 @@
                     const data = await response.json();
 
                     if (!response.ok) {
-                        // More robust error parsing: check for 'detail' string or object
                         let errorMsg = 'An unknown error occurred.';
                         if (data && typeof data.detail === 'string') {
                             errorMsg = data.detail;
                         } else if (data && data.detail && typeof data.detail.detail === 'string') {
-                            errorMsg = data.detail.detail; // FastAPI's nested error
+                            errorMsg = data.detail.detail;
                         }
                         throw new Error(errorMsg);
                     }
 
-                    if (data.message) { // Final completion message
+                    if (data.message) {
                         successfulSamples = REQUIRED_SAMPLES;
                         const mainMessage = `
                             <strong>Session Complete!</strong><br>
                             Your Session ID is: <span id="finalSessionId">${sessionId}</span><br><br>
                             Please fill out the <a href="https://forms.gle/3HtPpoSSfpQtNio77" target="_blank">release form</a> and include this Session ID on it.
                         `;
-                        showMessage(mainMessage, 'success', sessionId); // Pass session_id for setting textContent
+                        showMessage(mainMessage, 'success', sessionId);
                     } else {
                         successfulSamples = data.events_recorded_for_session;
                         showMessage(`Success! Sample ${successfulSamples} of ${REQUIRED_SAMPLES} recorded.`, 'success', null);
@@ -301,9 +355,8 @@
             }
 
             // --- UI & State Management ---
-            // Updated showMessage to handle dynamic elements with textContent
             function showMessage(mainMsgHTML, type, dynamicSessionId = null) {
-                messageBox.innerHTML = mainMsgHTML; // Still use innerHTML for bold, links etc.
+                messageBox.innerHTML = mainMsgHTML;
                 if (dynamicSessionId && document.getElementById('finalSessionId')) {
                     document.getElementById('finalSessionId').textContent = dynamicSessionId;
                 }
