--- a/index.html
+++ b/index.html
@@ -261,10 +261,13 @@
     <footer class="app-footer">
         <p>
             <a href="https://docs.typepod.l5.fyi" target="_blank">Documentation</a> |
-            <a href="https://github.com/your-org/typepod" target="_blank">GitHub</a> |
+            <a href="https://github.com/IvanAnishchuk/typepod" target="_blank">GitHub</a> |
             <a href="https://discord.gg/your-invite" target="_blank">Discord</a>
         </p>
-        <p>&copy; 2023 TypePod. All rights reserved.</p>
+	<p>
+	    GDPR Notice - This website <strong>does not</strong> use cookies.
+	</p>
+        <p>&copy; 2025 by Ivan. CC0 - Public Goods.</p>
     </footer>
 
     <script>
